# M-EMU

./: .clang-format  .gitignore  README.md
M-EMU/: CMakeLists.txt  unit_test.cpp
M-EMU-new/: CMakeLists.txt  main.cpp  unit_test.cpp
M-EMU-new/include/interface/: Core.h  IntCtrl.h  MMIO_Dev.h  MMU.h  Platform.h
M-EMU-new/include/misc/: obj_factory.h  status_enum.h
M-EMU-new/include/sdk/: console.h  instance_desc.h  sdkconfig.h  symbol_attr.h
M-EMU-new/include/sdk/diff_test/: rv64_diff_test.h
M-EMU-new/include/sdk/gdb_stub/: GDBStub.h  gdb_rsp.h
M-EMU-new/include/sdk/test/: test.h
M-EMU-new/modules/: CMakeLists.txt
M-EMU-new/modules/bus/default/include/: module_manifest.hpp
M-EMU-new/modules/bus/default/src/: empty.cpp
M-EMU-new/modules/core/rv64/: CMakeLists.txt
M-EMU-new/modules/core/rv64/include/: RV64Core.h  RV64SV39_MMU.h  module_manifest.hpp  rv64_csr_structs.h
M-EMU-new/modules/core/rv64/inline_impl/: rv64_amo.hpp  rv64_common.hpp  rv64_exec.hpp  rv64_privilege.hpp  rv64_sv39.hpp
M-EMU-new/modules/core/rv64/src/: rv64_amo.cpp  rv64_common.cpp  rv64_exec.cpp  rv64_privilege.cpp  rv64_sv39.cpp
M-EMU-new/modules/dev/ram/: CMakeLists.txt
M-EMU-new/modules/dev/ram/include/: MMIOMem_Impl.hpp  module_manifest.hpp
M-EMU-new/modules/dev/ram/src/: empty.cpp
M-EMU-new/modules/dev/uartlite/include/: MMIODev_CEmuAdapter.hpp  module_manifest.hpp
M-EMU-new/modules/dev/uartlite/src/: empty.cpp
M-EMU-new/modules/intc/rv_clint/: CMakeLists.txt
M-EMU-new/modules/intc/rv_clint/include/: ClintIntCtrl_CEmuAdapter.h  module_manifest.hpp
M-EMU-new/modules/intc/rv_clint/src/: empty.cpp
M-EMU-new/modules/intc/rv_plic/include/: PLICIntCtrl_CEmuAdapter.h  mmio_dev.hpp  module_manifest.hpp
M-EMU-new/modules/platform/default/: CMakeLists.txt
M-EMU-new/modules/platform/default/include/: DefaultPlatform.hpp  module_manifest.hpp
M-EMU-new/src/: module_scanning.cpp  obj_factory.cpp
M-EMU-new/src/gdb_stub/: GDBStub_common.cpp  GDBStub_utils.cpp  gdb_rsp.cpp  unit_test.cpp
M-EMU/include/interface/: Core.h  MMU.h  Platform.h
M-EMU/include/misc/: obj_factory.h  obj_factory.hpp
M-EMU/include/sdk/: console.h
M-EMU/include/sdk/test/: test.h
M-EMU/modules/bus/default/: CMakeLists.txt
M-EMU/modules/bus/default/include/: MMIOBus_Impl.hpp
M-EMU/modules/core/rv64/: CMakeLists.txt
M-EMU/modules/core/rv64/include/: RV64Core.h  RV64SV39_MMU.h  rv64_structs.h  rv64_sv39_structs.h
M-EMU/modules/core/rv64/inline_impl/: rv64_common.hpp  rv64_privilege.hpp
M-EMU/modules/core/rv64/src/: rv64_common.cpp  rv64_debug.cpp  (+1 more)
M-EMU/modules/dev/uartlite/: CMakeLists.txt  README.md
M-EMU/modules/dev/uartlite/include/: MMIODev_CemuUartAdapter.hpp  uartlite.hpp
M-EMU/modules/intc/rv_plic/: CMakeLists.txt
M-EMU/modules/intc/rv_plic/include/: PLICIntCtrl_CEmuAdapter.h  RVPLICtrl.hpp
M-EMU/modules/intc/rv_plic/src/: empty.cpp
M-EMU/modules/platform/default/: CMakeLists.txt
M-EMU/src/gdb_stub/: GDBStub_cmds.cpp  unit_test.cpp
ME-EMU/: CMakeLists.txt  main.cpp
ME-EMU-new/: CMakeLists.txt  main.cpp
ME-EMU-new/include/custom/core/: RV64Core.h  RV64SV39_MMU.h  RV64_structs.h
ME-EMU-new/include/custom/misc/: RVCore.hpp  RVPLICtrl.hpp  RVPrivilege.hpp  RVPrivilege.hpp.txt  RVTLB_SV39.hpp  RVTLB_SV39.hpp.txt  ram.hpp  rv_aclint.hpp  rv_common.h  rv_common.hpp  rv_systembus.hpp
ME-EMU-new/include/impl/: MMIOBus_Impl.hpp  MMIODev_CEmuAdapter.hpp  MMIODev_CustomUART_Adapter.hpp  MMIOIntCtrl_CEmuAdapter.h  MMIOMem_Impl.hpp  MMIO_Bus_Impl.hpp  MMIO_MEM_Impl.hpp  Processor_CEmuAdapter.hpp
ME-EMU-new/include/interface/: Core.h  CoreIntCtrlBridge.h  IntCtrl.h  MMIO_Bus.h  MMIO_Dev.h  MMU.h  Processor.h
ME-EMU-new/include/misc/: status_enum.h
ME-EMU-new/src/core/: RV64Core_common.cpp  RV64Core_privilege.cpp  RV64SV39.cpp  RV64_AMO.cpp  RV64_SV39.cpp
ME-EMU/include/api/: utils.h
ME-EMU/include/builtin/core/: RV64Core.h  RV64SV39_MMU.h  rv64_inst.h  rv64_structs.h  rv64_sv39_structs.h
ME-EMU/include/custom/core/: RV64_CSR_structs.h  RV64_structs.h
ME-EMU/include/custom/misc/: RVCore.hpp.bak  RVCoreLocalInt.hpp  RVPLICtrl.hpp  rv_common.h.bak  rv_systembus.hpp
ME-EMU/include/impl/: MMIOBus_Impl.hpp  MMIOIntCtrl_CEmuAdapter.h
ME-EMU/include/interface/: IntCtrl.h  MMIO_Bus.h
ME-EMU/src/core/: RV64Core_common.cpp  RV64Core_privilege.cpp  RV64_AMO.cpp  RV64_Exec.cpp  RV64_SV39.cpp
docs/: GuideToRunLinux.md
firmware/: fw_dynamic.dep  fw_dynamic.elf  fw_dynamic.elf.dep  fw_dynamic.elf.ld  fw_jump.dep  fw_jump.elf  fw_jump.elf.dep  fw_payload.dep  fw_payload.elf.dep  fw_payload.elf.ld
firmware/payloads/: test.dep  test.elf  test.elf.dep  test.elf.ld  test_head.dep  test_main.dep
me-emu/: CMakeLists.txt  main.cpp
me-emu/include/api/core/cpu/: exec.h  trap.h
me-emu/include/api/core/mem/: read_write.h
me-emu/include/api/core/mmio_bus/: mmio.h
me-emu/include/api/core/mmu/: iommu.h  page_mmu.h  paging.h
me-emu/include/api/peripheral/: mmio.h
me-emu/include/struct/misc/: status_enum.h
me-emu/src/core/cpu/m6502/: m6502_api_impl.cpp  m6502_decoder.cpp  m6502_decoder.h  m6502_instruct.cpp
me-emu/src/core/cpu/riscv/: RVInt.hpp  RVPrivilege.hpp  rv_api_impl.cpp  rv_systembus.hpp
me-emu/src/core/mem/: mem_common.cpp
me-emu/src/core/mmio_bus/: mmio.cpp
me-emu/src/cpu/m6502/: m6502_decoder.cpp
me-emu/src/cpu/riscv/: RVCore.hpp  RVTLB_SV39.hpp  rv_api_impl.cpp
me-emu/src/mem/: MainMemory.h
(+6 files in other folders)
